cluster/apps/shiori/shiori/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shiori
  namespace: shiori
  labels:
    app: shiori
spec:
  replicas: 1
  selector:
    matchLabels:
      app: shiori
  template:
    metadata:
      labels:
        app: shiori
    spec:
      volumes:
        - name: shiori
          persistentVolumeClaim:
            claimName: shiori
      containers:
      - name: shiori
        image: ghcr.io/go-shiori/shiori:v1.7.0
        command: ["/usr/bin/shiori", "serve", "--webroot", "/"]
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        volumeMounts:
          - mountPath: /srv/shiori
            name: shiori
        resources:
          requests:
            cpu: 20m
            memory: 64Mi
          limits:
            cpu: 250m
            memory: 256Mi
