cluster/apps/shiori/shiori/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: shiori
  namespace: shiori
spec:
  ports:
    - name: http
      port: 8080
  selector:
    app: shiori
